--- a/src/app.css
+++ b/src/app.css
@@ -7,9 +7,8 @@
 }
 
 .question {
-  margin: 10rem auto;
-
-  width: 70%;
+  width: 65%;
+  margin: 0 auto;
 }
 .next {
   padding: 8px 25px;
@@ -21,6 +20,12 @@
   font-weight: bold;
   cursor: pointer;
   text-transform: capitalize;
+}
+.btn {
+  text-align: end;
+}
+.container {
+  margin: 12rem 0;
 }
 .app_ques {
   font-weight: bold;
