--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,8 @@
 
 .question {
   width: 65%;
-  margin: 0 auto;
+
+  margin: 12rem auto;
 }
 .next {
   padding: 8px 25px;
@@ -24,9 +25,7 @@
 .btn {
   text-align: end;
 }
-.container {
-  margin: 12rem 0;
-}
+
 .app_ques {
   font-weight: bold;
   font-size: 1.2rem;
